; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_tmarshal.c_test_libattr.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_tmarshal.c_test_libattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@LIBID_TestTypelib = common dso_local global i32 0, align 4
@LOCALE_NEUTRAL = common dso_local global i32 0, align 4
@LANG_NEUTRAL = common dso_local global i32 0, align 4
@SUBLANG_NEUTRAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"lcid %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_libattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_libattr() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = load i32, i32* @LOCALE_NEUTRAL, align 4
  %5 = call i32 @LoadRegTypeLib(i32* @LIBID_TestTypelib, i32 2, i32 5, i32 %4, i32** %1)
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @ok_ole_success(i32 %6, i32 (i32*, i32, i32, i32, i32**)* @LoadRegTypeLib)
  %8 = load i32, i32* %2, align 4
  %9 = call i64 @FAILED(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %0
  br label %39

12:                                               ; preds = %0
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @ITypeLib_GetLibAttr(i32* %13, %struct.TYPE_4__** %3)
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @ok_ole_success(i32 %15, i32 (i32*, i32, i32, i32, i32**)* @GetLibAttr)
  %17 = load i32, i32* %2, align 4
  %18 = call i64 @SUCCEEDED(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %36

20:                                               ; preds = %12
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i32, i32* @LANG_NEUTRAL, align 4
  %25 = load i32, i32* @SUBLANG_NEUTRAL, align 4
  %26 = call i64 @MAKELANGID(i32 %24, i32 %25)
  %27 = icmp eq i64 %23, %26
  %28 = zext i1 %27 to i32
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @ok(i32 %28, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i64 %31)
  %33 = load i32*, i32** %1, align 8
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %35 = call i32 @ITypeLib_ReleaseTLibAttr(i32* %33, %struct.TYPE_4__* %34)
  br label %36

36:                                               ; preds = %20, %12
  %37 = load i32*, i32** %1, align 8
  %38 = call i32 @ITypeLib_Release(i32* %37)
  br label %39

39:                                               ; preds = %36, %11
  ret void
}

declare dso_local i32 @LoadRegTypeLib(i32*, i32, i32, i32, i32**) #1

declare dso_local i32 @ok_ole_success(i32, i32 (i32*, i32, i32, i32, i32**)*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @ITypeLib_GetLibAttr(i32*, %struct.TYPE_4__**) #1

declare dso_local i32 @GetLibAttr(i32*, i32, i32, i32, i32**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i64 @MAKELANGID(i32, i32) #1

declare dso_local i32 @ITypeLib_ReleaseTLibAttr(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @ITypeLib_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
